--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>NewsTrakr</title>
+	<meta charset="utf-8">
+	<meta http-equiv="content-language" content="en">
 	<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<link rel="stylesheet" href="style.css">
 </head>
